Fixed spacing between attached tweet images

--- a/style.css
+++ b/style.css
@@ -140,6 +140,10 @@
     margin-bottom: 20px !important;
 }
 
+.r-1867qdf .r-zl2h9q {
+    margin-bottom: 2px !important;
+}
+
 .r-1s2bzr4 {
     margin-top: 20px !important;
 }
